--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="shortcut icon" type="x-icon"
     href="https://i.pinimg.com/736x/50/a5/18/50a518a1aaab566d30fa31ec3d66af7e.jpg">
-    <link rel="stylesheet" href="style-new.css">
+    <link rel="stylesheet" href="style.css">
     <title>SUBACITO - TRANG CHỦ</title>
 </head>
 
