--- a/index.html
+++ b/index.html
@@ -1,539 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
-    <link rel="shortcut icon" type="x-icon"
-    href="https://i.pinimg.com/736x/50/a5/18/50a518a1aaab566d30fa31ec3d66af7e.jpg">
-    <link rel="stylesheet" href="style.css">
-    <title>SUBACITO - TRANG CHỦ</title>
+    <title>Document</title>
 </head>
-    <style>
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&family=Monoton&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Koulen&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    width: 100%;
-    min-height: 100%;
-}
-
-.footer{
-    position: relative;
-    height: 10vh;
-    background: rgb(66, 64, 64);
-}
-.copyright{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-.drop-down-lv2{
-    display: none;
-}
-.drop-down-lv2-2{
-    display: none;
-}
-
-.scroll-to-top {
-    position: relative;
-}
-.btn-position {
-    position: fixed;
-    bottom: 30px;
-    right: 25px;
-    z-index: 20;
-
-}
-.btnstyle {
-    background-color: rgb(95, 174, 179);
-    border: none;
-    border-radius: 7px;
-    font-weight: lighter;
-    height: 40px;
-    width: 40px;
-    color: #fff;
-    cursor: pointer;
-    /* transition: all 0.5s ease-in-out; */
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 0;
-    z-index: 99;
-}
-.btnstyle {
-    transition-timing-function: ease;
-}
-
-.btnstyle.active {
-    opacity: 1;
-}
-
-.mySwiper {
-    width: 100% !important;
-}
-/* ========================================= */
-
-.wrapper-side-bar ul {
-    list-style: none;
-}
-
-.wrapper-side-bar ul li {
-    background: #33383e;
-    padding: 20px;
-    display: block;
-}
-
-.wrapper-side-bar ul li:hover {
-    background: #202222;
-}
-
-.wrapper-side-bar ul li a {
-    color: white;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.li-cursor{
-    cursor: pointer;
-}
-.side-bar {
-    position: absolute;
-    opacity: 0;
-    width: 350px;
-    height: 100%;
-    top: 0;
-    left: -400px;
-    overflow: hidden;
-    position: fixed;
-    background: #33383e;
-    z-index: 999;
-    transition: 0.5s;
-}
-
-.enter {
-    opacity: 1;
-    left: 0;
-}
-
-.close-menu {
-    color: white;
-    margin: 3%;
-    text-align: right;
-}
-.close{
-    cursor: pointer;
-}
-/* ========================================= */
-
-
-.menu {
-    position: fixed;
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background: linear-gradient(to right, #ff99cc 0%, #3333cc 100%);
-    z-index: 998;
-}
-
-.menu ul {
-    list-style-type: none;
-}
-
-.menu ul li:hover {
-    transition: 0.9s;
-    background: blue;
-}
-
-.menu ul li {
-    display: inline-block;
-    padding: 20px;
-}
-
-.menu ul li a {
-    color: white;
-    text-decoration: none;
-    text-align: center;
-    font-size: 18px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-.logo {
-    color: white;
-    font-size: 30px;
-    font-family: 'Bebas Neue', cursive;
-    font-family: 'Koulen', cursive;
-}
-
-.show-case {
-    background-image: url(https://i.pinimg.com/originals/aa/ec/12/aaec12affbb02f7ddbd86750492b8224.jpg);
-    width: 100%;
-    min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.show-case-2 {
-    background-image: url(https://i.pinimg.com/originals/aa/ec/12/aaec12affbb02f7ddbd86750492b8224.jpg);
-    width: 100%;
-    min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.show-case-3 {
-    background-image: url(https://i.pinimg.com/originals/aa/ec/12/aaec12affbb02f7ddbd86750492b8224.jpg);
-    width: 100%;
-    min-height: 100vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-
-
-.toggle-bar {
-    padding: 0 5px;
-    font-size: 2em;
-    display: none;
-    cursor: pointer;
-}
-
-.toggle-bar:hover {
-    padding: 0 5px;
-    border: 1px solid black;
-    background: red;
-}
-
-.text-center {
-    font-family: 'Bebas Neue', cursive;
-    font-family: 'Koulen', cursive;
-    font-family: 'Monoton', cursive;
-    font-size: 3em;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.swiper {
-    width: 100vh;
-    height: 100vh;
-}
-
-.swiper-slide {
-    text-align: center;
-    font-size: 18px;
-    background: #fff;
-
-    /* Center slide text vertically */
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    align-items: center;
-}
-
-.swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.content {
-    width: 100%;
-    min-height: 100vh;
-    position: relative;
-}
-
-.row {
-    position: absolute;
-    display: flex;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.img img {
-    max-width: 400px;
-    height: auto;
-}
-
-.card {
-    display: block;
-    margin: 10px;
-    padding: 20px;
-    padding-bottom: 50px;
-    border: 1px solid gray;
-}
-
-.card:hover {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-    cursor: pointer;
-}
-
-@media screen and (min-width:768px) {
-    .side-bar{
-        opacity: 0;
-    }
-}
-
-@media screen and (max-width:767px) {
-    .content {
-        height: 100vh;
-        margin-top: 40px;
-        margin-bottom: 40px;
-    }
-    img {
-        width: 35vh;
-    }
-
-    .navbar {
-        display: none;
-    }
-
-    .show-case {
-        min-height: 50vh;
-    }
-
-    .toggle-bar {
-        transform: rotate(90deg);
-        position: relative;
-        top: 0;
-        right: 60%;
-        display: block;
-    }
-
-    .logo {
-        position: relative;
-        left: 16%;
-    }
-
-    .text-center {
-        text-align: center;
-        width: 100%;
-        font-size: 3em;
-        position: absolute;
-        top: 30%;
-        left: 50%;
-        word-spacing: 14px;
-    }
-
-    .video {
-        display: none;
-    }
-
-    .show-case {
-        height: 100vh;
-        background-color: rgb(104, 144, 167);
-        background-image: none;
-    }
-    .card-hide{
-        display: none;
-    }
-    .row {
-        flex-direction: column;
-    }
-}
-    </style>
 <body>
-    <!-- <div class="container"> -->
-    <div class="side-bar">
-        <div class="close-menu"><span class="close"><i class="fa-solid fa-xmark fa-2x"></i></span></div>
-        <div class="wrapper-side-bar">
-            <div class="nav-side-bar">
-                <ul>
-                    <li onclick="location.href='#'" class="li-cursor">
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <a>QUẢN LÝ CRUSH</a>
-                            <div class="click-to-show" style="font-size: 1.5em; color: white;"><i class="fa-solid fa-plus"></i></div>
-                            <div class="click-to-hide" style="display: none; font-size: 1.5em; color: white;"><i class="fa-solid fa-minus"></i></div>
-                        </div>
-                        <ul class="drop-down-lv2">
-                            <li class="drop-down-lv2-item"><a href="#">1</a></li>
-                            <li class="drop-down-lv2-item"><a href="#">2</a></li>
-                            <li class="drop-down-lv2-item"><a href="#">3</a></li>
-                        </ul>
-                    </li>
-                    <li onclick="location.href='#'" class="li-cursor">
-                        <div style="display: flex; justify-content: space-between; align-items: center;">
-                            <a>HƯỚNG DẪN</a>
-                            <div class="click-to-show-2" style="font-size: 1.5em; color: white;"><i class="fa-solid fa-plus"></i></div>
-                            <div class="click-to-hide-2" style="display: none; font-size: 1.5em; color: white;"><i class="fa-solid fa-minus"></i></div>
-                        </div>
-                        <ul class="drop-down-lv2-2">
-                            <li class="drop-down-lv2-item"><a href="#">1</a></li>
-                            <li class="drop-down-lv2-item"><a href="#">2</a></li>
-                            <li class="drop-down-lv2-item"><a href="#">3</a></li>
-                        </ul>
-                    </li>
-                    <li onclick="location.href='#'" class="li-cursor"><a>LỊCH SỬ</a></li>
-                    <li onclick="location.href='#'" class="li-cursor"><a>QUÀ NHẬN ĐƯỢC</a></li>
-                </ul>
-            </div>
-            
-        </div>
-    </div>
-
-    <div class="menu">
-        <div class="logo">SUBACITO</div>
-        <div class="navbar">
-            <ul>
-                <li><a href="#">QUẢN LÝ CRUSH</a></li>
-                <li><a href="#">HƯỚNG DẪN</a></li>
-                <li><a href="#">LỊCH SỬ</a></li>
-                <li><a href="#">QUÀ NHẬN ĐƯỢC</a></li>
-            </ul>
-        </div>
-        <div class="toggle-bar" id="side-bar-button">|||</div>
-    </div>
-
-
-
-    <div class="swiper mySwiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <div class="show-case">
-                    <div class="text-center">CRUSH LÀ GÌ?</div>
-
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="show-case-2">
-                    <div class="text-center">CRUSH LÀ GÌ?</div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="show-case-3">
-                    <div class="text-center">CRUSH LÀ GÌ?</div>
-                </div>
-            </div>
-        </div>
-        <div class="swiper-pagination"></div>
-    </div>
-
-    <section class="content ">
-        <div class="row">
-            <div class="card" onclick="location.href='#'">
-                <div class="img">
-                    <img src="crush-la-gi-8.jpg" alt="">
-                </div>
-                <div class="text">CRUSH</div>
-            </div>
-            <div class="card" onclick="location.href='#'">
-                <div class="img">
-                    <img src="crush-la-gi-8.jpg" alt="">
-                </div>
-                <div class="text">CRUSH</div>
-            </div>
-            <div class="card card-hide" onclick="location.href='#'">
-                <div class="img">
-                    <img src="crush-la-gi-8.jpg" alt="">
-                </div>
-                <div class="text">CRUSH</div>
-            </div>
-        </div>
-    </section>
-    <section class="footer">
-        <div class="copyright">SUBACITO</div>
-    </section>
-    <button type="button" class="scroll-to-top btn-position btnstyle"><i
-        class="fa-solid fa-angle-up"></i></button>
-
-
-
-
-
-    <!-- </div> -->
-    <!-- Swiper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-        integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-    <!-- Initialize Swiper -->
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            pagination: {
-                el: ".swiper-pagination",
-            },
-        });
-    </script>
-    <!-- ==================================================== -->
-    <script>
-        $("#side-bar-button").click(function () {
-            $("#side-bar-button").css("opacity", "0");
-            $(".side-bar").addClass("enter");
-        })
-
-        $(".close").click(function () {
-            $(".side-bar").removeClass("enter");
-            $("#side-bar-button").css("opacity", "1");
-        }) 
-    </script>
-    <!-- ==================================================== -->
-    <script>
-        const nav = document.querySelector("nav");
-    const btnstyle = document.querySelector(".btnstyle");
-    btnstyle.addEventListener("click", function () {
-      window.scrollTo({ top: 0, left: 0, behavior: "smooth" });
-    });
-    window.addEventListener("scroll", () => {
-      if (window.pageYOffset > 90) {
-        btnstyle.classList.add("active");
-      } else {
-        btnstyle.classList.remove("active");
-      }
-    });
-    </script>
-    <script>
-        $(".click-to-show").click(function(){
-            $(".click-to-show").css("display", "none");
-            $(".click-to-hide").css("display","block");
-            $(".drop-down-lv2").css("display", "block");
-        })
-        $(".click-to-hide").click(function(){
-            $(".click-to-show").css("display", "block");
-            $(".click-to-hide").css("display","none");
-            $(".drop-down-lv2").css("display", "none");
-        })
-
-        $(".click-to-show-2").click(function(){
-            $(".click-to-show-2").css("display", "none");
-            $(".click-to-hide-2").css("display","block");
-            $(".drop-down-lv2-2").css("display", "block");
-        })
-        $(".click-to-hide-2").click(function(){
-            $(".click-to-show-2").css("display", "block");
-            $(".click-to-hide-2").css("display","none");
-            $(".drop-down-lv2-2").css("display", "none");
-        })
-    </script>
-
+    <H1>SUBACITO STUDIO</H1>
+    <a href="#">Download</a>
 </body>
-
 </html>
